--- a/client/src/sidebar.css
+++ b/client/src/sidebar.css
@@ -259,8 +259,8 @@
 }
 
 .building-container::-webkit-scrollbar {
-  width: 0; /* Kaydırma çubuğunu gizler */
-  background: transparent; /* Arka planı saydam yapar */
+  width: 0; 
+  background: transparent; 
 }
 
 .building-list {
@@ -269,12 +269,14 @@
 }
 
 .building-item {
-  color: white; /* Yazı rengini beyaz yapar */
-  font-weight: bold; /* Yazıyı daha kalın yapar */
-  margin-bottom: 10px; /* İstediğiniz boşluk miktarını burada ayarlayabilirsiniz */
+  color: white; 
+  font-weight: bold;
+  font-size: 15px; 
+  margin-bottom: 10px; 
+  margin-left: 20px;
 }
 
-/* Örnek stil */
+
 
 .building-list {
   list-style: none;
@@ -288,9 +290,17 @@
 }
 
 .searchBar{
-  margin-left: 20px;
+  margin-left: 40px;
+  border-style: solid;
+  border-width: 1px;
+  height: 20px;
+  border-radius: 0.5em; 
 }
 
 .building-item.selected {
   background-color: #e6e6e6;
+}
+.contentSection.is-expanded {
+  height: auto;
+  width: calc(100% - 40px);
 }
